<resources>
    <string name="a_login_button_text">IAAA 登录</string>
    <string name="a_login_canceled">登录已取消</string>
    <string name="a_login_embed_title">PKU RUNNER</string>
    <string name="a_login_fail">登录失败</string>
    <string name="a_login_login_to_server_error">与 PKU Runner 服务器通讯失败 %s</string>
    <string name="a_login_logining_to_server">正在与 PKU Runner 服务器取得联系……</string>
    <string name="a_login_offline_button_text">离线登录</string>
    <string name="a_login_offline_existing_cancel">取消</string>
    <string name="a_login_offline_existing_choose_one">请选择您的身份</string>
    <string name="a_login_offline_existing_error">大事不妙！请速速联系开发者！%s</string>
    <string name="a_login_offline_invalid">请输入名字并选择合适的性别</string>
    <string name="a_login_old_user">旧用户</string>
    <string name="a_login_version_dialog_content">很抱歉，该版本的 PKU Runner 已经太旧（或者 bug 太多），请点击下载最新版本。</string>
    <string name="a_login_version_dialog_negative_button">稍后更新</string>
    <string name="a_login_version_dialog_positive_button">下载链接</string>
    <string name="a_login_version_dialog_title">请更新您的客户端！</string>
    <string name="a_main_error_loading_data">数据加载异常！%s</string>
    <string name="a_main_error_loading_status">加载用户里程失败！原因：%s</string>
    <string name="a_main_error_loading_weather">天气加载失败！%s</string>
    <string name="a_main_exit_dialog_content">此时退出会导致本次跑步记录消失</string>
    <string name="a_main_exit_dialog_negative">取消</string>
    <string name="a_main_exit_dialog_positive">确定退出</string>
    <string name="a_main_exit_dialog_title">提示</string>
    <string name="a_main_exit_press_again">再按一次后退键退出程序</string>
    <string name="a_main_logout_dialog_content">注销后未上传的跑步记录可能丢失，如果不确定如何操作请迅速联系开发组！</string>
    <string name="a_main_logout_dialog_negative">取消</string>
    <string name="a_main_logout_dialog_positive">确定注销</string>
    <string name="a_main_logout_dialog_title">请注意</string>
    <string name="a_main_update_action">现在更新</string>
    <string name="a_main_update_notice">检测到新版本</string>
    <string name="a_main_weather_abnormal_format" formatted="false">"以下是天气信息：
城市\u0009\u0009%s
天气情况\u0009%s
风向\u0009\u0009%s
空气质量\u0009%s
运动建议\u0009空气质量较差，尽量避免在室外长时间活动。"</string>
    <string name="a_main_weather_format" formatted="false">"以下是天气信息：
城市\u0009\u0009%s
天气情况\u0009%s
风向\u0009\u0009%s
空气质量\u0009%s
运动建议\u0009%s\u0009%s"</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">PKURunner</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">取 消</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="d_token_invalid_dialog_content">很抱歉，您的登录状态已经失效，常常可能是由在第二台设备上登录引起的。您可以注销账号并重新登录，或者可以通过直接上传未上传的记录来重新激活登录状态。</string>
    <string name="d_token_invalid_dialog_positive_button">了解了</string>
    <string name="d_token_invalid_dialog_title">登录状态已失效！</string>
    <string name="define_appintro" />
    <string name="done_button">DONE</string>
    <string name="e_server_0">成功</string>
    <string name="e_server_1">不能重复验证</string>
    <string name="e_server_10">记录无效（测试用）</string>
    <string name="e_server_11">场馆无效</string>
    <string name="e_server_12">未找到序列</string>
    <string name="e_server_13">未找到索引</string>
    <string name="e_server_14">无权限访问</string>
    <string name="e_server_15">您的客户端过旧无法兼容，请及时升级</string>
    <string name="e_server_16">服务器忙碌</string>
    <string name="e_server_17">未找到活动</string>
    <string name="e_server_18">无照片</string>
    <string name="e_server_19">标题无效</string>
    <string name="e_server_2">失败次数过多</string>
    <string name="e_server_20">限制无效</string>
    <string name="e_server_21">被管理员拒绝</string>
    <string name="e_server_22">性别无效</string>
    <string name="e_server_23">跑步时间不合格</string>
    <string name="e_server_3">登录已失效</string>
    <string name="e_server_4">记录已上传过</string>
    <string name="e_server_5">记录未找到</string>
    <string name="e_server_6">登录连接失败</string>
    <string name="e_server_7">跑步里程不合格</string>
    <string name="e_server_8">跑步速度不合格</string>
    <string name="e_server_9">跑步位置不合格</string>
    <string name="e_server_n1">未知错误</string>
    <string name="enter_msgcode">请输入手机验证码！</string>
    <string name="enter_otpcode">请输入动态口令！</string>
    <string name="enter_username_passwd">请输入学号/职工号/北大邮箱！</string>
    <string name="error">错误</string>
    <string name="expand_button_title">Advanced</string>
    <string name="f_list_loading">正在加载......</string>
    <string name="f_list_no_data_notice">列表为空！</string>
    <string name="f_map_format_distance">%.1f</string>
    <string name="f_map_format_distance_sci">%.1e</string>
    <string name="f_map_format_speed">%.1f</string>
    <string name="f_map_format_speed_sci">%.1e</string>
    <string name="f_map_format_time_long" formatted="false">%02d:%02d:%02d</string>
    <string name="f_map_format_time_sci">%.1e</string>
    <string name="f_map_format_time_short" formatted="false">%02d:%02d</string>
    <string name="f_map_hint_distance_normal">里程 km</string>
    <string name="f_map_hint_distance_sci">里程 lP</string>
    <string name="f_map_hint_gps_info">正在搜索GPS…</string>
    <string name="f_map_hint_speed_main">速度 %s</string>
    <string name="f_map_hint_time_normal">时间</string>
    <string name="f_map_hint_time_sci">时间 tP</string>
    <string name="f_map_pause">暂停</string>
    <string name="f_map_resume">继续</string>
    <string name="f_map_run">跑步</string>
    <string name="f_map_stop">结束</string>
    <string name="f_offline_female">女</string>
    <string name="f_offline_gender">性别</string>
    <string name="f_offline_male">男</string>
    <string name="f_offline_name">姓名</string>
    <string name="f_permission_auth_now">立刻授权</string>
    <string name="f_permission_btn_ok">了解</string>
    <string name="f_permission_content">"打电话和外部储存权限都是(烦人的)高德地图模块要的。
像我们这么良心的软件，当然只要一个位置信息权限啦。"</string>
    <string name="f_permission_location">位置信息权限 %s</string>
    <string name="f_permission_not_auth">暂不授权</string>
    <string name="f_permission_phone">电话权限 %s</string>
    <string name="f_permission_sd">外部储存权限 %s</string>
    <string name="f_permission_status_negative">&lt;font color=#FF3333>未获得&lt;/font></string>
    <string name="f_permission_status_positive">&lt;font color=#33FF33>已获得&lt;/font></string>
    <string name="f_permission_title">权限授予说明与状态</string>
    <string name="f_record_detail_lap_anticlockwise">逆时针</string>
    <string name="f_record_detail_lap_clockwise">顺时针</string>
    <string name="f_record_detail_lap_count" formatted="false">%s %d 圈</string>
    <string name="f_record_detail_lap_zero">不足一圈</string>
    <string name="f_record_detail_speed">%.1f m/s</string>
    <string name="f_record_detail_status_offline">离线</string>
    <string name="f_record_detail_status_ok">已上传，合格</string>
    <string name="f_record_detail_status_unuploaded">未上传</string>
    <string name="f_record_detail_status_verified_fail">验证失败，原因：%s</string>
    <string name="f_record_detail_step_count">%d 步</string>
    <string name="f_record_detail_track_end">结束位置</string>
    <string name="f_record_detail_track_pause">暂停位置</string>
    <string name="f_record_detail_track_resume">继续位置</string>
    <string name="f_record_detail_track_start">开始位置</string>
    <string name="f_record_dialog_negative">取消</string>
    <string name="f_record_dialog_positive">确定</string>
    <string name="f_record_error_login_cancelled">登录已取消</string>
    <string name="f_record_error_login_fail">登录失败</string>
    <string name="f_record_error_start_camera">无法启动相机！请确保手机上至少有一个相机软件</string>
    <string name="f_record_ignore_photo">忽略</string>
    <string name="f_record_start_camera">开始拍照</string>
    <string name="f_record_use_last_photo">使用上次照片</string>
    <string name="f_task_complete_dialog_ok">确定</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="g_main_c_feedback">我们不会放过任何一条吐槽小能手们的意见和建议</string>
    <string name="g_main_c_pull_down">上传过的数据将会保留在服务端</string>
    <string name="g_main_c_switch_to_running">或者也可以从侧边抽屉中选择菜单条目</string>
    <string name="p_setting_about">关于</string>
    <string name="p_setting_about_text">由北大人自己写的跑步 app ，旨在提供更好的跑步体验</string>
    <string name="p_setting_clear_photos">清理无用照片</string>
    <string name="p_setting_connecting_to_dropbox">连接到 Dropbox</string>
    <string name="p_setting_dropbox_title">Dropbox</string>
    <string name="p_setting_gender">性别</string>
    <string name="p_setting_intro">引导页</string>
    <string name="p_setting_name">姓名</string>
    <string name="p_setting_settings">设置</string>
    <string name="p_setting_storage">存储与备份</string>
    <string name="p_setting_storage_summary">点击查看详情</string>
    <string name="p_setting_unit">显示使用的单位制</string>
    <string name="p_setting_unit_dialog">请选择您习惯的单位制</string>
    <string name="p_setting_user">用户信息</string>
    <string name="p_setting_version_name">版本号</string>
</resources>