<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/p_setting_user">
        <EditTextPreference android:title="@string/p_setting_name" android:key="pref_name" android:dialogTitle="Please enter your name" />
        <ListPreference android:entries="@array/p_setting_gender_display" android:title="@string/p_setting_gender" android:key="pref_gender" android:dialogTitle="Please select your gender" android:entryValues="@array/p_setting_gender_value" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/p_setting_settings">
        <Preference android:title="@string/p_setting_clear_photos" android:key="pref_clean_photo" />
        <ListPreference android:entries="@array/p_setting_unit_display" android:title="@string/p_setting_unit" android:key="pref_unit" android:dialogTitle="@string/p_setting_unit_dialog" android:entryValues="@array/p_setting_unit_value" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/p_setting_storage">
        <PreferenceScreen android:title="@string/p_setting_dropbox_title" android:key="pref_dropbox" android:summary="@string/p_setting_storage_summary">
            <Preference android:title="@string/p_setting_connecting_to_dropbox" android:key="pref_dropbox_connection" android:summary="" />
            <Preference android:title="用户信息" android:key="pref_dropbox_user" />
            <Preference android:title="导出数据库文件" android:key="pref_dropbox_upload" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/p_setting_about">
        <Preference android:title="PKU Runner" android:key="pref_about" android:summary="@string/p_setting_about_text" />
        <Preference android:title="@string/p_setting_version_name" android:key="pref_version" />
        <Preference android:title="@string/p_setting_intro" android:key="pref_guide" />
    </PreferenceCategory>
</PreferenceScreen>